include text angular

--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "angular-material": "^1.0.7",
     "angular-messages": "^1.5.3",
     "angular-meteor": "^1.3.10",
+    "angular-sanitize": "^1.5.5",
     "angular-ui-router": "^0.2.18",
-    "meteor-node-stubs": "~0.2.0"
+    "meteor-node-stubs": "~0.2.0",
+    "textangular": "^1.5.1"
   }
 }
