--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "angular-sanitize": "^1.5.5",
     "angular-ui-router": "^0.2.18",
     "meteor-node-stubs": "~0.2.0",
+    "ng-file-upload": "^12.0.4",
+    "t": "^0.5.1",
     "textangular": "^1.5.1"
   }
 }
