--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "angular-ui-router": "^0.2.18",
     "meteor-node-stubs": "~0.2.0",
     "ng-file-upload": "^12.0.4",
+    "slug": "^0.9.1",
     "t": "^0.5.1",
     "textangular": "^1.5.1"
   }
