--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "angular-meteor": "^1.3.10",
     "angular-sanitize": "^1.5.5",
     "angular-ui-router": "^0.2.18",
+    "angular-utils-pagination": "^0.11.1",
     "meteor-node-stubs": "~0.2.0",
     "ng-file-upload": "^12.0.4",
     "slug": "^0.9.1",
