--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "angular-messages": "^1.5.3",
     "angular-meteor": "^1.3.10",
     "angular-sanitize": "^1.5.5",
+    "angular-schema-form": "^0.8.13",
+    "angular-schema-form-bootstrap": "^0.2.0",
     "angular-ui-router": "^0.2.18",
     "angular-utils-pagination": "^0.11.1",
     "meteor-node-stubs": "~0.2.0",
