--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "socially",
   "private": true,
   "scripts": {
-    "start": "meteor run"
+    "start": "meteor run",
+    "test:watch": "meteor test --driver-package sanjo:jasmine --port 3030"
   },
   "dependencies": {
     "angular": "^1.5.3",
@@ -21,5 +22,8 @@
     "slug": "^0.9.1",
     "t": "^0.5.1",
     "textangular": "^1.5.1"
+  },
+  "devDependencies": {
+    "angular-mocks": "^1.5.5"
   }
 }
