--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "start": "meteor run",
-    "test:watch": "meteor test --driver-package sanjo:jasmine --port 3030"
+    "test:watch": "meteor test --driver-package practicalmeteor:mocha --port 3100"
   },
   "dependencies": {
     "angular": "^1.5.3",
@@ -12,6 +12,7 @@
     "angular-material": "^1.0.7",
     "angular-messages": "^1.5.3",
     "angular-meteor": "^1.3.10",
+    "angular-mocks": "^1.5.5",
     "angular-sanitize": "^1.5.5",
     "angular-schema-form": "^0.8.13",
     "angular-schema-form-bootstrap": "^0.2.0",
@@ -24,6 +25,8 @@
     "textangular": "^1.5.1"
   },
   "devDependencies": {
+    "@sanjo/jasmine-expect": "^1.0.0",
+    "@sanjo/jasmine-spy": "^1.0.1",
     "angular-mocks": "^1.5.5"
   }
 }
