--- a/package.json
+++ b/package.json
@@ -6,19 +6,22 @@
     "test:watch": "meteor test --driver-package practicalmeteor:mocha --port 3100"
   },
   "dependencies": {
-    "angular": "^1.5.3",
-    "angular-animate": "^1.5.3",
-    "angular-aria": "^1.5.3",
-    "angular-material": "^1.0.7",
-    "angular-messages": "^1.5.3",
+    "@sanjo/jasmine-expect": "^1.0.0",
+    "@sanjo/jasmine-spy": "^1.0.1",
+    "angular": "^1.5.5",
+    "angular-animate": "^1.5.5",
+    "angular-aria": "^1.5.5",
+    "angular-material": "^1.0.8",
+    "angular-messages": "^1.5.5",
     "angular-meteor": "^1.3.10",
     "angular-mocks": "^1.5.5",
+    "angular-route": "^1.5.5",
     "angular-sanitize": "^1.5.5",
     "angular-schema-form": "^0.8.13",
     "angular-schema-form-bootstrap": "^0.2.0",
     "angular-ui-router": "^0.2.18",
     "angular-utils-pagination": "^0.11.1",
-    "meteor-node-stubs": "~0.2.0",
+    "meteor-node-stubs": "^0.2.3",
     "ng-file-upload": "^12.0.4",
     "slug": "^0.9.1",
     "t": "^0.5.1",
